tests/trybuild/registry/comma_alone.stderr
error: no rules expected the token `,`
 --> tests/trybuild/registry/comma_alone.rs:4:30
  |
4 |     let registry = registry!(,);
  |                              ^ no rules expected this token in macro call
