tests/trybuild/registry/comma_alone.rs
use brood::registry;

fn main() {
    let registry = registry!(,);
}
